CHATS_SIT/force-app/main/default/objects/sfsit_t_non_adjmt_detail_hist__x.object
<CustomObject>
    <description>sfsit$t_non_adjmt_detail_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_non_adjmt_detail_hist</externalName>
    <fields>
        <fullName>amt_detail_adjmt__c</fullName>
        <description>amt_detail_adjmt</description>
        <externalDeveloperName>amt_detail_adjmt</externalDeveloperName>
        <label>Adjustment Detail Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_status_detail_adjmt__c</fullName>
        <description>cde_status_detail_adjmt</description>
        <externalDeveloperName>cde_status_detail_adjmt</externalDeveloperName>
        <label>Adjustment Detail  Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Auth ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_detail_adjmt_non__c</fullName>
        <description>idn_detail_adjmt_non</description>
        <externalDeveloperName>idn_detail_adjmt_non</externalDeveloperName>
        <label>Non Adjustment Detail ID</label>
        <length>50</length>
        <referenceTargetField>T_NON_ADJMT_DETAIL__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_NON_ADJMT_DETAIL__c</referenceTo>
        <relationshipLabel>Non Adjustment Detail Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_non_adjmt_detail_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_detail_adjmt_non_hist__c</fullName>
        <description>idn_detail_adjmt_non_hist</description>
        <externalDeveloperName>idn_detail_adjmt_non_hist</externalDeveloperName>
        <label>Non Adjustment Detail Hsitory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Program finding Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_non_adjmt_detail_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Non Adjustment Detail History</label>
    <pluralLabel>Non Adjustment Detail History</pluralLabel>
</CustomObject>